Changes in version 0.99.1 (2019-07-14)
+ Submitted to Bioconductor
Changes in version 0.99.2 (2019-08-18)
+ Revise formats to consistent with Bioconductor coding styles.
+ Added unit tests
Changes in version 1.0.1 (2020-01-28)
+ Revise some typos in vignettes and mans.
Changes in version 1.1.1 (2020-02-27)
+ Revise some typos in vignettes and mans.
Changes in version 1.2.1 (2020-03-15)
+ Add the GTF2PAS to convert GTF to PAS reference.
+ Add the APAVolcano to plot the APAdiff results.
+ Adjusted p-value in APAdiff
+ Allow the user to set argument minMQS to filter minimum mapping quality score of counted reads.
+ Add the build-in PAS reference for hg38 and mm10.
+ Add the build-in PAS reference for all PASs including conserved and non-conserved.
+ Update vignettes and mans.

