@@ -1,0 +1,1 @@
+UnsupportedPlatforms: win64, win32
